--- a/.github/workflows/run-video-indexer.yml
+++ b/.github/workflows/run-video-indexer.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   indexer:
     runs-on: self-hosted
-    if: github.repository == 'ClownpieceStripedAbyss/aya-dance-video-index' && false # disable for now
+    if: github.repository == 'ClownpieceStripedAbyss/aya-dance-video-index'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
